fixed text overflow in paragraph summary

--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -64,6 +64,8 @@
   p {
     color: $section-text;
     margin-bottom: 1rem;
+    overflow-y: scroll;
+    max-height: 126px;
   }
 }
 
